gol & openmrs/gol-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: gol-deploy
spec:
  minReadySeconds: 5
  replicas: 1
  selector:
    matchLabels:
      app1: gol
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: gol
      labels:
        app1: gol
    spec:
      containers:
        - name: gol-pod 
          image: satish1990/gol:1.0         
          ports:
            - containerPort: 8080
              protocol: TCP
          command:
            - catalina.sh
            - run
