gol & openmrs/gol-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gol-svc
spec:
  type: LoadBalancer
  selector:
    app1: gol
  ports:
    - name: webport
      port: 33000
      targetPort: 8080
