gol & openmrs/openmrs-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openmrs-svc
spec:
  type: NodePort
  selector:
    app: openmrs
  ports:
    - name: webport
      port: 33000
      targetPort: 8080
      nodePort: 32000
