gol & openmrs/openmrs-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmrs-ingress
  #labels:
    #app: openmrs
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /openmrs
            pathType: Prefix
            backend:
              service:
                name: openmrs-svc
                port:
                  number: 8080
    - http:
        paths: 
          - path: /gol
            pathType: Prefix              
            backend:
              service:
                name: gol-svc
                port:
                  number: 8080
---------------------------------------------

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: nginx-ingress
  annotations:
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: domain
    http:
      paths:
      - pathType: Prefix
        path: "/openmrs"
        backend:
          service:
            name: openmrs-svc
            port:
             number: 8080
      - pathType: Prefix
        path: "/gol"
        backend:
          service:
            name: gol-svc
            port:
              number: 8080
![preview](Images/k8s1.png)
